--- a/index.html
+++ b/index.html
@@ -26,14 +26,14 @@
     <link rel="stylesheet" href="css/icomoon.css">
     <link rel="stylesheet" href="css/style.css">
   </head>
-  <body>
+  <body> 
     
-  <nav class="navbar navbar-expand-lg navbar-dark ftco_navbar bg-dark ftco-navbar-light" id="ftco-navbar">
+  <nav class="navbar navbar-expand-lg" id="ftco-navbar">
     <div class="container">
       <a class="navbar-brand" href="index.html">
             <img src="images/umg.png" class="img-responsive" width="50" >
             
-        UMG <br></a>
+        UMG GUASTATOYA <br></a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#ftco-nav" aria-controls="ftco-nav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="oi oi-menu"></span> Menu
       </button>
