--- a/about.html
+++ b/about.html
@@ -27,10 +27,12 @@
     <link rel="stylesheet" href="css/style.css">
   </head>
   <body>
-    
-  <nav class="navbar navbar-expand-lg navbar-dark ftco_navbar bg-dark ftco-navbar-light" id="ftco-navbar">
+     
+    <nav class="navbar navbar-expand-lg" id="ftco-navbar">
     <div class="container">
-      <a class="navbar-brand" href="index.html"><i class="flaticon-university"></i>Genius <br><small>University</small></a>
+      <a class="navbar-brand" href="index.html">
+        <i><img src="images/umg.png" class="img-responsive" width="50" ></i>
+        UMG GUASTATOYA</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#ftco-nav" aria-controls="ftco-nav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="oi oi-menu"></span> Menu
       </button>
