--- a/blog.html
+++ b/blog.html
@@ -28,23 +28,23 @@
   </head>
   <body>
     
-  <nav class="navbar navbar-expand-lg navbar-dark ftco_navbar bg-dark ftco-navbar-light" id="ftco-navbar">
+    <nav class="navbar navbar-expand-lg" id="ftco-navbar">
     <div class="container">
-      <a class="navbar-brand" href="index.html"><i class="flaticon-university"></i>Genius <br><small>University</small></a>
+      <a class="navbar-brand" href="index.html"><i><img src="images/umg.png" class="img-responsive" width="50"></i>UMG GUASTATOYA</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#ftco-nav" aria-controls="ftco-nav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="oi oi-menu"></span> Menu
       </button>
 
       <div class="collapse navbar-collapse" id="ftco-nav">
         <ul class="navbar-nav ml-auto">
-          <li class="nav-item"><a href="index.html" class="nav-link">Home</a></li>
-          <li class="nav-item"><a href="about.html" class="nav-link">About</a></li>
-          <li class="nav-item"><a href="course.html" class="nav-link">Courses</a></li>
-          <li class="nav-item"><a href="teacher.html" class="nav-link">Teacher</a></li>
-          <li class="nav-item active"><a href="blog.html" class="nav-link">Blog</a></li>
-          <li class="nav-item"><a href="event.html" class="nav-link">Events</a></li>
-          
-        </ul>
+          <!--Gabriel-->  <li class="nav-item active"><a href="index.html" class="nav-link">MargeCube</a></li>
+          <!--Joni--> <li class="nav-item"><a href="about.html" class="nav-link">Nosotros</a></li>
+          <!--Nefta--> <li class="nav-item"><a href="course.html" class="nav-link">Creacion</a></li>
+          <!--Yonatan-->  <li class="nav-item"><a href="teacher.html" class="nav-link">Dispositivos</a></li>
+          <!--Celeste-->  <li class="nav-item"><a href="blog.html" class="nav-link">Contenido</a></li>
+          <!--Cordinadores-->  <li class="nav-item"><a href="experiencias.html" class="nav-link">Experiencia</a></li>
+          <!--Fabian--> 
+          </ul>
       </div>
     </div>
   </nav>
