--- a/about.html
+++ b/about.html
@@ -130,33 +130,52 @@
     <footer class="ftco-footer ftco-bg-dark ftco-section img" style="background-image: url(images/bg_2.jpg); background-attachment:fixed;">
     	<div class="overlay"></div>
       <div class="container">
-        <div class="row mb-5">
-          <div class="col-md-3">
-            <div class="ftco-footer-widget mb-4">
-              <h2><a class="navbar-brand" href="index.html"><i class="flaticon-university"></i>Genius <br><small>University</small></a></h2>
-              <p>"CONOCERÉIS LA VERDAD Y LA VERDAD OS HARÁ LIBRES" </p>
-              <p>Juan 8:32</p>
-              <ul class="ftco-footer-social list-unstyled float-md-left float-lft mt-5">
-                <li class="ftco-animate"><a href="https://www.facebook.com/sistemasumgguastatoya/" target="_blank"><span class="icon-facebook"></span></a></li>
-              </ul>
-            </div>
+        <div class="row mb-1">
+
+          <div class="col-md-2">
           </div>
 
           <div class="col-md-3">
             <div class="ftco-footer-widget mb-4">
+              <h2><a class="navbar-brand" href="index.html"><i><img src="images/umg.png" class="img-responsive" width="40" ></i>UMG <br><small>Guastatoya</small></a></h2>
+              <p>"CONOCERÉIS LA VERDAD Y LA VERDAD OS HARÁ LIBRES" </p>
+              <p>Juan 8:32</p>
+            </div>
+          </div>
+
+          <div class="col-md-2">
+          </div>
+
+          <div class="col-md-3">
+            <div class="ftco-footer-widget mb-4">
+              <h2 class="ftco-heading-2">Contacto</h2>
             	<div class="block-23 mb-3">
-	              <ul>
+                <ul>
 	                <li><span class="icon icon-map-marker"></span><span class="text">Barrio El Porvenir, Guastatoya El Progreso</span></li>
-	                <li><a href="#"><span class="icon icon-phone"></span><span class="text">7945-1925</span></a></li>
-	                <li><a href="#"><span class="icon icon-envelope"></span><span class="text">info@umgguastatoya.com</span></a></li>
+	                <li><span class="icon icon-phone"></span><span class="text">7945-1925</span></li>
+	                <li><span class="icon icon-envelope"></span><span class="text">info@umgguastatoya.com</span></li>
 	              </ul>
 	            </div>
             </div>
           </div>
         </div>
+
         <div class="row">
           <div class="col-md-12 text-center">
+            <p></p>
+            <p>
+              Síguenos en: 
+                <ul class="ftco-footer-social list-unstyled ">
+                  <li class="ftco-animate"><a href="https://www.facebook.com/sistemasumgguastatoya/" target="_blank"><span class="icon-facebook"></span></a></li>
+            </ul>
+            </p>
+            <br></br>
+          </div>
+        </div>
+      </div>
 
+        <div class="row">
+          <div class="col-md-12 text-center">
             <p><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
   Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="icon-heart" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
   <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. --></p>
