modificacion de videos de la fabricacion del cubo subidos a youtube y cambio de algunas imagenes en about.html

--- a/about.html
+++ b/about.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Genius - Free Bootstrap 4 Template by Colorlib</title>
+    <title>Acerca de nosotros</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     
@@ -52,13 +52,12 @@
   </nav>
     <!-- END nav -->
     
-    <div class="hero-wrap hero-wrap-2" style="background-image: url('images/bg_2.jpg'); background-attachment:fixed;">
+    <div class="hero-wrap hero-wrap-2" style="background-image: url('images/font_about.jpg'); background-attachment:fixed;">
       <div class="overlay"></div>
       <div class="container">
         <div class="row no-gutters slider-text align-items-center justify-content-center" data-scrollax-parent="true">
           <div class="col-md-8 ftco-animate text-center">
-            <p class="breadcrumbs"><span class="mr-2"><a href="index.html">Home</a></span> <span>About</span></p>
-            <h1 class="mb-3 bread">About</h1>
+            <h1 class="mb-3 bread">Nosotros</h1>
           </div>
         </div>
       </div>
@@ -101,7 +100,7 @@
     </section>
 
 
-    <section class="ftco-section-3 img" style="background-image: url(images/bg_3.jpg);">
+    <section class="ftco-section-3 img" style="background-image: url(images/font_about2.jpg);">
     	<div class="overlay"></div>
     	<div class="container">
     		<div class="row d-md-flex justify-content-center">
