--- a/course.html
+++ b/course.html
@@ -84,7 +84,7 @@
     						<p class="category"><span>Paso 2</span> <span class="price">Fabricación De Cubo</span></p>
     						<h3 class="mb-3"><a href="#">Selección de Material</a></h3>
     						<p>Debes seleccionar un material resistente para mayor durabilidad, nuestro cubo se fabricó en Cervecería Centroaméricana con plástico utilizado para los procesos de Producción</p>
-    						<p><a href="images/creacion_cubo/fabricacion_cubo.mp4" class="btn btn-primary">Visualizar Proceso</a></p>
+    						<p><a href="https://www.youtube.com/watch?v=oxfJCYlUPIw" target="_blank" class="btn btn-primary">Visualizar Proceso</a></p>
     					</div>
     				</div>
           </div>
@@ -96,7 +96,7 @@
     						<p class="category"><span>Paso 3</span> <span class="price">Agregar Plantilla</span></p>
     						<h3 class="mb-3"><a href="#">Agregar Etiqueta de Plantilla</a></h3>
     						<p>Es recomendable agregar plastico contact a la plantilla para protegerla de liquidos y golpes, luego recortarla y agregarla al cubo plástico cuidadosamente. Este proceso permitirá reemplazar la etiqueta al momento de dañarse</p>
-    						<p><a href="images/creacion_cubo/etiqueta_merge_cube.mp4" class="btn btn-primary">Visualizar Proceso</a></p>
+    						<p><a href="https://www.youtube.com/watch?v=gUzGXzRGX_A" target="_blank" class="btn btn-primary">Visualizar Proceso</a></p>
     					</div>
     				</div>
           </div>
@@ -109,7 +109,7 @@
     						<p class="category"><span class="price">Resumen</span></p>
     						<h3 class="mb-3"><a href="#">Fabricacion Resumida</a></h3>
     						<p>El proceso de fabricación se llevó a cabo teniendo en cuenta la resistencia de nuestro Merge Cube para que pudiera cumplir con las necesidades</p>
-    						<p><a href="images/creacion_cubo/MERGE_CUBE.mp4" class="btn btn-primary">Visualizar Proceso</a></p>
+    						<p><a href="https://www.youtube.com/watch?v=_w8MVVQWe6Q" target="_blank" class="btn btn-primary">Visualizar Proceso</a></p>
     					</div>
     				</div>
           </div>
