se agrego la pagina que contiene informacion sobre el contenido creado

--- a/about.html
+++ b/about.html
@@ -86,7 +86,7 @@
         <div class="row justify-content-center">
           <div class="col-md-12">
             <div class="img " style=" width: 100%;"> 
-              <img src="https://scontent-mia3-1.xx.fbcdn.net/v/t1.0-9/67235078_891702974543590_3153575308976717824_n.jpg?_nc_cat=100&_nc_sid=e3f864&_nc_ohc=2l6u9CMUASgAX-xCk4C&_nc_ht=scontent-mia3-1.xx&oh=56ad62381ceeb0c6d40da6791dd9b73f&oe=5F814033" class="img-fluid">
+              <img src="images/umgguastatoya.jpg"  class="img-fluid">
             </div>
           </div>
         </div>
