Ultima version del sitio web

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         <!--Nefta--> <li class="nav-item"><a href="course.html" class="nav-link">Creacion</a></li>
         <!--Yonatan-->  <li class="nav-item"><a href="teacher.html" class="nav-link">Dispositivos</a></li>
         <!--Celeste-->  <li class="nav-item"><a href="blog.html" class="nav-link">Contenido</a></li>
-        <!--Cordinadores-->  <li class="nav-item"><a href="experiencias.html" class="nav-link">Experiencia</a></li>
+        <!--Cordinadores-->  <li class="nav-item"><a href="experiencias.html" class="nav-link">Material de apoyo</a></li>
 
         </ul>
       </div>
