--- a/about.html
+++ b/about.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Acerca de nosotros</title>
+    <title>Seminario De Tecnologias De Informacion</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     
@@ -44,7 +44,7 @@
     <!--Nefta--> <li class="nav-item"><a href="course.html" class="nav-link">Creacion</a></li>
     <!--Yonatan-->  <li class="nav-item"><a href="teacher.html" class="nav-link">Dispositivos</a></li>
     <!--Celeste-->  <li class="nav-item"><a href="blog.html" class="nav-link">Contenido</a></li>
-    <!--Cordinadores-->  <li class="nav-item"><a href="experiencias.html" class="nav-link">Experiencia</a></li>
+    <!--Cordinadores-->  <li class="nav-item"><a href="experiencias.html" class="nav-link">Material de apoyo</a></li>
 
         </ul>
       </div>
